[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datasentry"
version = "0.1.0"
description = "Data-centric ML inspection and auto-remediation toolkit"
authors = [
    {name = "Ankush Sharma"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "imbalanced-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
