[metadata]
name = datasentry
version = 1.0.0
author = DataSentry Team
author_email = contact@datasentry.dev
license = MIT
license_files = LICENSE
description = A Professional Data Quality Framework for ML Pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/010Ankushsharma/datasentry
project_urls = 
    Bug Tracker = https://github.com/010Ankushsharma/datasentry/issues
    Documentation = https://datasentry.readthedocs.io
    Source Code = https://github.com/010Ankushsharma/datasentry
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    data quality
    machine learning
    data cleaning
    outlier detection
    imbalanced data
    label noise
    data leakage
    missing values
    data drift

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    matplotlib>=3.4.0
    seaborn>=0.11.0
    scipy>=1.7.0

[options.packages.find]
where = src

[options.extras_require]
imblearn = imbalanced-learn>=0.9.0
cleanlab = cleanlab>=2.0.0
all = 
    imbalanced-learn>=0.9.0
    cleanlab>=2.0.0
dev = 
    pytest>=7.0.0
    pytest-cov>=3.0.0
    pytest-mock>=3.6.0
    black>=22.0.0
    flake8>=4.0.0
    isort>=5.10.0
    mypy>=0.950
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0

[options.package_data]
datasentry = py.typed

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info
per-file-ignores =
    __init__.py:F401

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
